# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/fbx/: ak74m.fbx  cube.fbx
assets/ply/: cube.ply  cylinder.ply  grid.ply  sphere.ply  torus.ply
cmake/: find_cuda.cmake  find_fbxsdk.cmake  find_glut.cmake  find_libxml2.cmake  find_opengl.cmake  toolchain-cross-mingw32-linux.cmake
src/: ambient_light.cpp  ambient_light.h  ambient_light_cpu_impl.h  camera.cpp  camera.h  camera_cpu_impl.h  color.h  cuda_exception.cpp  cuda_exception.h  cuda_helper.h  directional_light.cpp  directional_light.h  directional_light_cpu_impl.h  exception.cpp  exception.h  fbx_parser.cpp  fbx_parser.h  graph_object.h  intersect.h  light_source.h  main.cpp  material.h  plane.cpp  plane.h  plane_cpu_impl.h  ply_parser.cpp  ply_parser.h  point_light.cpp  point_light.h  point_light_cpu_impl.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  scene_cpu_impl.h  scene_parser.h  sphere.cpp  sphere.h  sphere_cpu_impl.h  (+3 more)
src/cuda/: ambient_light.cu  camera.cu  directional_light.cu  plane.cu  point_light.cu  render_kernel.cu  render_kernel.h  scene.cu  sphere.cu  triangle.cu
